--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -252,7 +252,7 @@ collections: # A list of collections the CMS should be able to edit
           label: Template,
           name: template,
           widget: hidden,
-          default: DefaultPage,
+          default: AboutPage,
         }
       - { label: Slug, name: slug, widget: string }
       - { label: Title, name: title, widget: string }
