--- a/content/settings/global.yml
+++ b/content/settings/global.yml
@@ -1,5 +1,5 @@
-siteTitle: Yellow Cake
-siteUrl: 'https://yellowcake.netlify.com'
+siteTitle: Waters Without Frontiers
+siteUrl: 'https://waterfrontiers.co.za'
 siteDescription: >-
   A starter project for creating lightning-fast websites with Gatsby v2 Netlify
   CMS v2 and Uploadcare media library.
