--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/thriveweb/yellowcake"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reach/router": "^1.2.1",
     "dom-form-serializer": "^1.0.7",
     "gatsby": "^2.17.7",
